<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#ffe4c4">

            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center_horizontal|top">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Longitude"
                android:id="@+id/textView"
                android:layout_marginTop="108dp"
                android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginLeft="67dp"
                android:layout_marginStart="67dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Latitude"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView" android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" android:layout_marginTop="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Speed"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView5" android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5" android:layout_marginTop="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Accuracy"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2" android:layout_marginTop="30dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Date"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3" android:layout_marginTop="30dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:id="@+id/button"
            android:layout_marginBottom="42dp"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Longitude_val"
            android:id="@+id/textView6"
            android:layout_alignTop="@+id/textView" android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" android:layout_marginLeft="51dp" android:layout_marginStart="51dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Latitude_val"
            android:id="@+id/textView7" android:layout_alignTop="@+id/textView2"
            android:layout_alignLeft="@+id/textView6" android:layout_alignStart="@+id/textView6"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Accuracy_val"
            android:id="@+id/textView8" android:layout_alignTop="@+id/textView5"
            android:layout_alignLeft="@+id/textView7" android:layout_alignStart="@+id/textView7"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Speed_val"
            android:id="@+id/textView9" android:layout_alignTop="@+id/textView3"
            android:layout_alignLeft="@+id/textView8" android:layout_alignStart="@+id/textView8"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Date_val"
            android:id="@+id/textView10" android:layout_alignTop="@+id/textView4"
            android:layout_alignLeft="@+id/textView9" android:layout_alignStart="@+id/textView9"/>
</RelativeLayout>